# q-cap

./: README.md
core/qcap-cli/: Cargo.toml
core/qcap-cli/src/: main.rs
core/qcap-cli/tests/: integration.rs
core/qcap-core/: Cargo.toml
core/qcap-core/src/: archive.rs  capabilities.rs  lib.rs  manifest.rs  payload_merkle.rs  signatures.rs
docs/: capability-key-issuance.md  capability-keys.md  copilot-agent-brief-mvp.md  eli5.md  mvp-notes-core.md  risks-mitigations.md
scripts/: demo.ps1  seed-registry.sh  smoke-registry.sh
sdks/ts/: package-lock.json  package.json
services/qcap-registry/: README.md  main.go  main_test.go
services/qcap-registry/seed/: alpha.qcap  beta.qcap
