[package]
name = "qcap-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
qcap-core = { path = "../qcap-core" }
hex = "0.4"
ed25519-dalek = { version = "2" }
serde_json = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = "3"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
